samples/_failures_safe/1761794680_58a428_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad6c966d.c: In function ‘transform_bounding_box’:
./samples/SAFE/__tmp_ad6c966d.c:122:9: error: expected expression at end of input
  122 |         if (transformed.y >
      |         ^~
./samples/SAFE/__tmp_ad6c966d.c:122:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ad6c966d.c:122:9: error: expected declaration or statement at end of input
